Simplification des classes de test