@@ -16,20 +16,13 @@
 package org.impotch.bareme;
 
 import java.math.BigDecimal;
-
-import static java.math.BigDecimal.ZERO;
-
 import java.math.RoundingMode;
-import java.util.ArrayList;
+
 import java.util.List;
 
 import org.impotch.util.TypeArrondi;
 
 public class BaremeTauxMarginalConstantParTranche extends BaremeParTranche implements BaremeTauxMarginal {
-
-    /**************************************************/
-    /******************* Méthodes *********************/
-    /**************************************************/
 
     @Override
     public BigDecimal calculSansSeuil(BigDecimal assiette) {
@@ -70,15 +63,13 @@ public class BaremeTauxMarginalConstantParTranche extends BaremeParTranche imple
     @Override
     public BigDecimal getTauxMaximum() {
         List<TrancheBareme> tranches = getTranches();
-        if (tranches.size() > 0) {
-            TrancheBareme derniereTranche = tranches.get(tranches.size()-1);
+        if (!tranches.isEmpty()) {
+            TrancheBareme derniereTranche = tranches.getLast();
             return derniereTranche.getIntervalle().getFin().map(borne ->
                 calcul(borne).divide(borne,10, RoundingMode.HALF_UP))
                     .orElse(derniereTranche.getValeurs().getIncrement());
-        }
-        if (tranches.size() == 0) {
+        } else {
             throw new IllegalStateException("Impossible de définir le taux maximal, il n’y a pas de tranches !!  ");
         }
-        return null;
     }
 }
